01-cluster/09-Stackgres-Operator/03-stackgres-ui-service-ingress-private.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackgres-ui-ingress-private
  namespace: stackgres
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: stackgres-operator-ui
spec:
  ingressClassName: internal-nginx
  rules:
    - host: stackgres-devuat.samsassets.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stackgres-restapi
                port:
                  number: 443
  tls:
  - hosts:
    - stackgres-devuat.samsassets.com
    secretName: stackgres-dashboard-rsa-cert
